--- a/src/containers/Header/Header.scss
+++ b/src/containers/Header/Header.scss
@@ -20,4 +20,27 @@
             font-size: $base-size + 1px;
         }
     }
+    .languages{
+        .welcome{
+            margin-right: 10px;
+        }
+        .language-en{
+            margin-right: 15px;
+            margin-left: 10px;
+            opacity: 0.8;
+            cursor: pointer;
+            &.active{
+                opacity: 1;
+                color: #30d663;
+            }
+        }
+        .language-vi{
+            opacity: 0.8;
+            cursor: pointer;
+            &.active{
+                opacity: 1;
+                color: orange;
+            }
+        }
+    }
 }
