--- a/src/containers/HomePage/HomePage.scss
+++ b/src/containers/HomePage/HomePage.scss
@@ -26,6 +26,10 @@
     }
 }
 
+.slick-disabled{
+    display: none !important;
+}
+
 .section-share{
     &.section-specialty{
         background: #f5f5f5;
