--- a/src/containers/System/Doctor/ManageSchedule.scss
+++ b/src/containers/System/Doctor/ManageSchedule.scss
@@ -20,6 +20,12 @@
             border : 1px solid gray;
 
         }
+
+        .btn-schedule {
+            &.active {
+                background-color: orange;
+            }
+        }
     }
 
     .btn-save-schedule {
