--- a/src/containers/Patient/Doctor/Modal/BookingModal.scss
+++ b/src/containers/Patient/Doctor/Modal/BookingModal.scss
@@ -21,8 +21,9 @@
         }
 
         .booking-modal-body {
-            padding: 15px;
-            height : 100%;
+            padding : 15px;
+            height  : 100%;
+            overflow: scroll;
         }
 
         .booking-modal-footer {
