--- a/src/containers/Patient/Doctor/ProfileDoctor.scss
+++ b/src/containers/Patient/Doctor/ProfileDoctor.scss
@@ -3,11 +3,13 @@
         display: flex;
 
         .content-left {
-            background   : center center no-repeat;
-            width        : 80px;
-            height       : 80px;
-            border-radius: 50%;
-            margin       : 10px 20px;
+            background-size    : cover;
+            background-repeat  : no-repeat;
+            background-position: center;
+            width              : 80px;
+            height             : 80px;
+            border-radius      : 50%;
+            margin             : 10px 20px;
         }
 
         .content-right {
