--- a/src/containers/Patient/Specialty/DetailSpecialty.scss
+++ b/src/containers/Patient/Specialty/DetailSpecialty.scss
@@ -1,12 +1,34 @@
 .detail-specialty-container {
+    background-color: #eee;
+
     .description-specialty {
-        border: 1px solid red;
+        padding         : 10px;
+        background-color: white !important;
+        margin          : 15px 0;
+
+        h1,
+        h2,
+        h3 {
+            font-size  : 16px;
+            font-weight: 600;
+        }
     }
 
-    .search-sp-doctor {}
+    .search-sp-doctor {
+        select {
+            height       : 30px;
+            padding      : 5px 8px;
+            border       : none;
+            outline      : none;
+            border-radius: 3px;
+            cursor       : pointer;
+        }
+    }
 
     .detail-specialty-body {
-        margin: 0 100px;
+        margin        : 0 100px;
+        display       : flex;
+        flex-direction: column;
     }
 
     .each-doctor {
@@ -23,6 +45,11 @@
             width       : 50%;
             border-right: 1px solid #ddd;
 
+            .profile-doctor-container {
+                .down {
+                    padding-right: 10px;
+                }
+            }
         }
 
         .dt-content-right {
@@ -36,10 +63,16 @@
             }
 
             .doctor-extra-infor {
+                border-top : 1px solid #ddd;
+                margin-top : 10px;
+                padding-top: 10px;
+
                 .doctor-extra-infor-container {
                     padding-left: 0 !important;
                 }
             }
+
+
         }
     }
 }
