--- a/src/containers/System/Doctor/ManagePatient.scss
+++ b/src/containers/System/Doctor/ManagePatient.scss
@@ -27,6 +27,25 @@
             table {
                 width: 100% !important;
             }
+
+            button {
+                border : none;
+                outline: none;
+                cursor : pointer;
+            }
+
+            .mp-btn-confirm {
+                margin-right : 10px;
+                height       : 30px;
+                border-radius: 3px;
+                background   : orange;
+            }
+
+            .mp-btn-remedy {
+                height       : 30px;
+                border-radius: 3px;
+                background   : #39dca0;
+            }
         }
     }
 
